# vidforge

./: .editorconfig  .gitattributes  .gitignore  .lintstagedrc.json  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  app.identity.json  commitlint.config.js  crash-boundaries.json  eslint.config.mjs  eslint.config.project.mjs  index.html  knip.config.js  knip.project.json  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  ui-boundary.json  vite.config.ts
.claude/: settings.json
.claude/commands/: bootstrap.md
.claude/memory/: MEMORY.md  README.md  glossary.md  logging-contract.md  open-work-backlog.md  project-scope.md  repo-is-memory-home.md  response-prelude.md  user-conventions.md  version-bump-trigger.md
.claude/rules/: INDEX.md  agent-delegation.md  automation.md  challenge-premises.md  clarify-and-plan.md  code-quality.md  context-loading.md  core-principles.md  crash-handling.md  cross-platform.md  dependencies.md  documentation.md  editing-workflow.md  frontend-architecture.md  git-workflow.md  knowledge-handover.md  logging.md  no-guessing.md  privacy.md  response-format.md  reusability.md  rule-maintenance.md  rust-conventions.md  security.md  stack-release.md  stack-tauri.md  testing.md  theming.md  ui-design.md  upstream-changes.md  verification.md  versioning.md
.github/workflows/: release.yml
.husky/: pre-commit
docs/adr/: README.md  app-001-tauri-rust-react-stack.md  app-020-hud-design-system.md  app-021-tauri-window-chrome.md  app-023-cross-platform-release-signing.md  app-025-logging-architecture.md  app-026-no-native-ui-primitives.md  app-031-app-identity-ssot.md  app-032-crash-handling-mechanism.md  core-002-best-solution-principle.md  core-003-repo-single-source-of-truth.md  core-004-verify-first-no-guessing.md  core-005-reusability-policy.md  core-006-context-budget-selective-loading.md  core-007-generated-indexes-staleness-gate.md  core-008-quality-pipeline.md  core-009-dependency-policy.md  core-010-testing-strategy.md  core-011-security-by-design.md  core-022-agent-delegation-governance.md  core-024-versioning-and-build-channels.md  core-030-portable-governance-core.md  core-032-config-layering-project-overlays.md  core-033-governance-layers-cascade.md  core-034-layered-adr-identifiers.md  core-035-cross-layer-supersession.md  core-036-challenge-the-premise.md  core-037-no-silent-death.md  core-038-layered-briefing-names.md  manifest.json
docs/howto/: new-project-from-template.md
docs/migrations/: README.md  app-100-ui-defaults-not-libraries.md  app-101-ui-boundary-gate.md  app-102-devdependency-bypass-closed.md  app-103-no-push-ci.md  app-104-crash-handling-mechanism.md  app-105-briefing-names.md  core-001-config-layering.md  core-002-versioning-per-change.md  core-003-governance-layers.md  core-004-layered-adr-ids.md  core-005-cross-layer-supersession.md  core-006-no-push-ci.md  core-007-crash-handling.md  core-008-layered-briefing-names.md
governance/: config.json  manifest.json
scripts/: bootstrap.mjs  check-index.mjs  context-for.mjs  governance-init.mjs  governance-manifest.mjs  governance-update.mjs  lint-memory.mjs  post-compact-reminder.sh  setup-claude-memory.sh  setup-hooks.sh  sync-identity.mjs  sync-index.mjs  sync-version.mjs  sync-version.test.mjs
scripts/lib/: bootstrap-fork.mjs  bootstrap-fork.test.mjs  crash-gate.mjs  crash-gate.test.mjs  governance-core.mjs  governance-core.test.mjs  governance.mjs  governance.test.mjs  ui-boundary.mjs  ui-boundary.test.mjs
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  deny.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: crash_probe.rs
src-tauri/icons/: icon.icns
src-tauri/src/: crash.rs  dto.rs  error.rs  lib.rs  logging.rs  main.rs  settings.rs  state.rs  tray.rs
src-tauri/src/browse/: mod.rs
src-tauri/src/commands/: browse.rs  jobs.rs  media.rs  mod.rs
src-tauri/src/ffmpeg/: discover.rs  install.rs  mod.rs
src-tauri/src/jobs/: mod.rs  preset.rs  queue.rs
src-tauri/src/media/: cache.rs  integrity.rs  mod.rs  probe.rs  quality.rs  scan.rs  thumbnail.rs
src-tauri/src/player/: mod.rs
src-tauri/tests/: contracts.rs  crash_e2e.rs
src-tauri/windows/: installer.nsi
src/api/: commands.test.ts  commands.ts
src/i18n/: useT.ts  (+5 more)
(+153 files in other folders)
