[package]
name = "vidforge"
version = "0.7.1"
description = "Point Vidforge at a folder and it lists every video as a card with a thumbnail and full technical metadata — resolution, container, video and audio codecs, bitrate, frame rate and more. Repair defective files and re-encode or convert between MP4, MKV and AVI, with a one-click visually-lossless MP4/H.264 default and fully configurable presets. Conversions run as non-blocking background jobs in a queue with live per-job progress, driven by a system-installed ffmpeg that Vidforge detects automatically."
authors = ["kaoszwerg"]
edition = "2021"
publish = false
# The app binary carries the product name so the dev dock/process shows it (ADR-024).
default-run = "vidforge"

[lib]
# `_lib` suffix keeps the lib name distinct from the bin on Windows (rust-lang/cargo#8519).
name = "vidforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "vidforge"
path = "src/main.rs"

# Versions pinned to the stable releases used by the shell and verified against crates.io (ADR-009).
# Cargo.lock is committed for reproducible builds.

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["tray-icon", "macos-private-api", "protocol-asset"] }
tauri-plugin-window-state = "2.4.1"
tauri-plugin-dialog = "2.7.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-appender = "0.2.5"
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
ts-rs = "12.0.1"
base64 = "0.22.1"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "process", "io-util", "time"] }

# On non-Windows targets the `open` crate handles URL launching via the system default handler.
# On Windows we drive ShellExecuteW directly (see commands::open_external) — `cmd /c start` from a
# windows-subsystem binary exits silently before the browser appears.
[target.'cfg(not(target_os = "windows"))'.dependencies]
open = "5.3.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
tempfile = "3.27.0"
